; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_glue_tokens.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_glue_tokens.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @glue_tokens to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @glue_tokens(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = call i32* (...) @make_buffer()
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @tok2s(i32* %9)
  %11 = call i32 @buf_printf(i32* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @tok2s(i32* %13)
  %15 = call i32 @buf_printf(i32* %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @buf_body(i32* %16)
  %18 = call i32* @lex_string(i32 %17)
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  ret i32* %19
}

declare dso_local i32* @make_buffer(...) #1

declare dso_local i32 @buf_printf(i32*, i8*, i32) #1

declare dso_local i32 @tok2s(i32*) #1

declare dso_local i32* @lex_string(i32) #1

declare dso_local i32 @buf_body(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
